--- a/src/main/resources/com/example/coffeeapp/Registrar.fxml
+++ b/src/main/resources/com/example/coffeeapp/Registrar.fxml
@@ -2,21 +2,38 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="358.0" prefWidth="516.0" xmlns="http://javafx.com/javafx/17.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.coffeeapp.registrarCotroller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="358.0" prefWidth="516.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.coffeeapp.registrarCotroller">
    <children>
-      <Text layoutX="232.0" layoutY="61.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Registrar" wrappingWidth="73.7626953125">
+      <Text layoutX="117.0" layoutY="127.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Registrar" wrappingWidth="73.7626953125">
          <font>
             <Font size="18.0" />
          </font>
       </Text>
-      <TextField fx:id="correoTextR" layoutX="189.0" layoutY="109.0" />
-      <TextField fx:id="passTextR" layoutX="189.0" layoutY="177.0" />
-      <Button fx:id="botonFinR" layoutX="238.0" layoutY="253.0" mnemonicParsing="false" onAction="#finalizarRegistro" text="Finalizar" />
-      <Text layoutX="123.0" layoutY="127.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Correo:" />
-      <Text layoutX="98.0" layoutY="195.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Contraseña:" />
+      <TextField fx:id="correoTextR" layoutX="123.0" layoutY="165.0" />
+      <TextField fx:id="passTextR" layoutX="123.0" layoutY="222.0" />
+      <Button fx:id="botonFinR" layoutX="122.0" layoutY="282.0" mnemonicParsing="false" onAction="#finalizarRegistro" text="Finalizar" />
+      <Text layoutX="49.0" layoutY="182.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Correo:" />
+      <Text layoutX="37.0" layoutY="239.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Contraseña:" />
+      <Button fx:id="volver" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#volverinicio" text="Regresar" textFill="#861010">
+         <font>
+            <Font name="Beirut Regular" size="13.0" />
+         </font>
+      </Button>
+      <ImageView fx:id="imagenregistro" fitHeight="150.0" fitWidth="200.0" layoutX="334.0" layoutY="186.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../images/registro.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="imagenregistro2" fitHeight="150.0" fitWidth="200.0" layoutX="327.0" layoutY="27.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../images/registro2.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
