--- a/src/main/resources/com/example/Controladores/CoffeeApp.fxml
+++ b/src/main/resources/com/example/Controladores/CoffeeApp.fxml
@@ -1,16 +1,64 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.effect.Glow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="352.0" prefWidth="517.0" xmlns="http://javafx.com/javafx/17.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="382.0" prefWidth="563.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.Controladores.CoffeeAppController">
    <children>
-      <Text layoutX="95.0" layoutY="182.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Bienvenido a CoffeApp">
-         <font>
-            <Font size="36.0" />
-         </font>
-      </Text>
+      <SplitPane disable="true" dividerPositions="0.29797979797979796" layoutX="98.0" layoutY="129.0" prefHeight="382.0" prefWidth="563.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <items>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+               <children>
+                  <ImageView fx:id="inicio1" fitHeight="157.0" fitWidth="164.0" layoutY="282.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../images/inicio1.png" />
+                     </image>
+                  </ImageView>
+                  <Label layoutX="14.0" layoutY="14.0" text="Tus preparaciones" textFill="#6d3c11" />
+                  <ListView fx:id="listaPreparaciones" layoutX="-35.0" layoutY="52.0" prefHeight="225.0" prefWidth="164.0" AnchorPane.bottomAnchor="103.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="52.0" />
+               </children>
+            </AnchorPane>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+               <children>
+                  <Text fill="#6d3c11" layoutX="14.0" layoutY="29.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Bienvenido a CoffeApp" wrappingWidth="403.203125">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Text>
+                  <Button fx:id="botonrecetas" layoutX="227.0" layoutY="110.0" mnemonicParsing="false" onAction="#ingresoRecetas" text="recetas">
+                     <effect>
+                        <Glow />
+                     </effect>
+                     <cursor>
+                        <Cursor fx:constant="CLOSED_HAND" />
+                     </cursor>
+                  </Button>
+                  <Button fx:id="metodos" layoutX="223.0" layoutY="262.0" mnemonicParsing="false" onAction="#accesoMetodos" text="metodos" />
+                  <ImageView fx:id="recetasimg" fitHeight="121.0" fitWidth="171.0" layoutX="33.0" layoutY="62.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../images/recetas.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fx:id="metodosimg" fitHeight="127.0" fitWidth="138.0" layoutX="36.0" layoutY="211.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../images/metodos.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </AnchorPane>
+        </items>
+      </SplitPane>
    </children>
+   <cursor>
+      <Cursor fx:constant="HAND" />
+   </cursor>
 </AnchorPane>
