--- a/src/main/resources/com/example/Controladores/CoffeeApp.fxml
+++ b/src/main/resources/com/example/Controladores/CoffeeApp.fxml
@@ -14,7 +14,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="382.0" prefWidth="563.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.Controladores.CoffeeAppController">
    <children>
-      <SplitPane disable="true" dividerPositions="0.29797979797979796" layoutX="98.0" layoutY="129.0" prefHeight="382.0" prefWidth="563.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <SplitPane dividerPositions="0.29797979797979796" layoutX="98.0" layoutY="129.0" prefHeight="382.0" prefWidth="563.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
@@ -29,11 +29,6 @@
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <Text fill="#6d3c11" layoutX="14.0" layoutY="29.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Bienvenido a CoffeApp" wrappingWidth="403.203125">
-                     <font>
-                        <Font size="15.0" />
-                     </font>
-                  </Text>
                   <Button fx:id="botonrecetas" layoutX="227.0" layoutY="110.0" mnemonicParsing="false" onAction="#ingresoRecetas" text="recetas">
                      <effect>
                         <Glow />
@@ -42,6 +37,11 @@
                         <Cursor fx:constant="CLOSED_HAND" />
                      </cursor>
                   </Button>
+                  <Text fill="#6d3c11" layoutX="14.0" layoutY="29.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Bienvenido a CoffeApp" wrappingWidth="403.203125">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Text>
                   <Button fx:id="metodos" layoutX="223.0" layoutY="262.0" mnemonicParsing="false" onAction="#accesoMetodos" text="metodos" />
                   <ImageView fx:id="recetasimg" fitHeight="121.0" fitWidth="171.0" layoutX="33.0" layoutY="62.0" pickOnBounds="true" preserveRatio="true">
                      <image>
