Creación de usuario en tipo factory, dos hijos de tipo usuario, alteración de los metodos de registro en los controladores, cambios en pantalla de registro

--- a/src/main/resources/com/example/Controladores/Registrar.fxml
+++ b/src/main/resources/com/example/Controladores/Registrar.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -11,15 +12,15 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="358.0" prefWidth="516.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.Controladores.RegistrarCotroller">
    <children>
-      <Text layoutX="117.0" layoutY="127.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Registrar" wrappingWidth="73.7626953125">
+      <Text layoutX="70.0" layoutY="108.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Registrar" wrappingWidth="73.7626953125">
          <font>
             <Font size="18.0" />
          </font>
       </Text>
-      <TextField fx:id="usuarioTextR" layoutX="123.0" layoutY="165.0" />
-      <Button fx:id="botonFinR" layoutX="122.0" layoutY="282.0" mnemonicParsing="false" onAction="#finalizarRegistro" text="Registrarse" />
-      <Text layoutX="58.0" layoutY="184.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Usuario:" />
-      <Text layoutX="37.0" layoutY="239.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Contraseña:" />
+      <TextField fx:id="usuarioTextR" layoutX="123.0" layoutY="130.0" />
+      <Button fx:id="botonFinR" layoutX="123.0" layoutY="295.0" mnemonicParsing="false" onAction="#finalizarRegistro" text="Registrarse" />
+      <Text layoutX="64.0" layoutY="147.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Usuario:" />
+      <Text layoutX="43.0" layoutY="191.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Contraseña:" />
       <Button fx:id="volver" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#volverinicio" text="Regresar" textFill="#861010">
          <font>
             <Font name="Beirut Regular" size="13.0" />
@@ -35,6 +36,8 @@
             <Image url="@../../../images/registro2.png" />
          </image>
       </ImageView>
-      <PasswordField fx:id="passTextR" layoutX="123.0" layoutY="222.0" />
+      <PasswordField fx:id="passTextR" layoutX="123.0" layoutY="174.0" />
+      <CheckBox fx:id="BaristaButton" layoutX="69.0" layoutY="243.0" mnemonicParsing="false" onAction="#crearUsuarioBarista" text="Barista" />
+      <CheckBox fx:id="consumidorButton" layoutX="190.0" layoutY="243.0" mnemonicParsing="false" onAction="#crearUsuarioConsumidor" text="Consumidor" />
    </children>
 </AnchorPane>
