--- a/src/main/resources/com/example/Controladores/AnadirCafes.fxml
+++ b/src/main/resources/com/example/Controladores/AnadirCafes.fxml
@@ -33,7 +33,7 @@
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
                   <Circle fill="#a18262" layoutX="115.0" layoutY="245.0" radius="157.0" stroke="BLACK" strokeType="INSIDE" />
-                  <Button fx:id="AnadirCafe" layoutX="272.0" layoutY="288.0" mnemonicParsing="false" onAction="#AnadirCafe" text="Añadir" />
+                  <Button fx:id="AnadirCafe" layoutX="272.0" layoutY="288.0" mnemonicParsing="false" onAction="#annadirCafesBoot" text="Añadir" />
                   <TextField fx:id="SaborField" layoutX="60.0" layoutY="88.0" promptText="Ingrese el sabor" />
                   <TextField fx:id="AromaField" layoutX="379.0" layoutY="88.0" promptText="Ingrese el aroma" />
                   <TextField fx:id="CuerpoField" layoutX="219.0" layoutY="200.0" promptText="Ingrese el cuerpo" />
