--- a/src/main/resources/com/example/Controladores/hello-view.fxml
+++ b/src/main/resources/com/example/Controladores/hello-view.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -12,12 +11,12 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.Controladores.HelloController">
+<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.Controladores.IniciarSesionController">
    <children>
       <Circle fill="#69503c" layoutX="455.0" layoutY="438.0" radius="252.0" smooth="false" stroke="BLACK" strokeType="INSIDE" />
       <Circle fill="#a18262" layoutX="453.0" layoutY="456.0" radius="158.0" stroke="BLACK" strokeType="INSIDE" />
-      <Button fx:id="inicioSesion" layoutX="455.0" layoutY="357.0" mnemonicParsing="false" onAction="#iniciarsesion" text="Iniciar Sesion" />
-      <Button fx:id="registro" layoutX="354.0" layoutY="357.0" mnemonicParsing="false" onAction="#registrarse" text="Registrarse" />
+      <Button fx:id="inicioSesion" layoutX="463.0" layoutY="338.0" mnemonicParsing="false" onAction="#iniciarsesion" text="Iniciar Sesion" />
+      <Button fx:id="registro" layoutX="351.0" layoutY="338.0" mnemonicParsing="false" onAction="#registrarse" text="Registrarse" />
       <TextField fx:id="user" layoutX="375.0" layoutY="222.0" promptText="usuarioFactory" />
       <PasswordField fx:id="password" layoutX="375.0" layoutY="266.0" promptText="Contraseña" />
       <ImageView fitHeight="110.0" fitWidth="138.0" layoutX="408.0" layoutY="97.0" pickOnBounds="true" preserveRatio="true">
@@ -40,7 +39,5 @@
       <Line endX="270.0" endY="351.0" layoutX="330.0" layoutY="49.0" startX="270.0" startY="-49.0" strokeWidth="10.0" />
       <Line endX="-328.5" endY="351.0" layoutX="330.0" layoutY="49.0" startX="265.0" startY="351.0" strokeWidth="10.0" />
       <Line endX="-330.0" endY="347.0" layoutX="330.0" layoutY="49.0" startX="-330.0" startY="-44.0" strokeWidth="10.0" />
-      <CheckBox fx:id="checkBarista" layoutX="363.0" layoutY="326.0" mnemonicParsing="false" text="Barista" textFill="#fcfcfc" />
-      <CheckBox fx:id="checkConsumidor" layoutX="454.0" layoutY="326.0" mnemonicParsing="false" text="Consumidor" textFill="#ebe7e7" />
    </children>
 </AnchorPane>
