--- a/src/main/resources/com/example/Controladores/InicioConsumidor.fxml
+++ b/src/main/resources/com/example/Controladores/InicioConsumidor.fxml
@@ -1,14 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Circle?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.Controladores.InicioConsumidorController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="382.0" prefWidth="563.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.Controladores.InicioConsumidorController">
+   <children>
+      <Circle fill="#a18262" layoutX="287.0" layoutY="206.0" radius="404.0" stroke="WHITE" strokeType="INSIDE" />
+      <TableView fx:id="RecetasTable" layoutX="14.0" layoutY="42.0" prefHeight="328.0" prefWidth="227.0">
+        <columns>
+          <TableColumn prefWidth="75.0" text="Café" />
+          <TableColumn prefWidth="75.0" text="Metodo" />
+            <TableColumn prefWidth="75.0" text="Barista" />
+        </columns>
+      </TableView>
+      <Label layoutX="85.0" layoutY="11.0" text="Nuevas recetas" />
+      <Button fx:id="CerrarSesion" layoutX="450.0" layoutY="19.0" mnemonicParsing="false" onAction="#CerrarSesion" text="Cerrar sesión" />
+      <ImageView fx:id="ImagenCafe" fitHeight="298.0" fitWidth="308.0" layoutX="247.0" layoutY="103.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../images/coffee-beans-copyright-amigastronomicas.jpeg" />
+         </image>
+      </ImageView>
+   </children>
 </AnchorPane>
